@@ -92,7 +92,8 @@ public:
 		COMPOSITE_CLIP = 0x10000,
 		COMPOSITE_EFFECT = 0x20000,
 		COMPOSITE_OPACITY = 0x40000,
-		COMPOSITE_OPACITY_MASK = 0x80000
+		COMPOSITE_OPACITY_MASK = 0x80000,
+		COMPOSITE_MASK = (COMPOSITE_TRANSFORM | COMPOSITE_CLIP | COMPOSITE_EFFECT | COMPOSITE_OPACITY | COMPOSITE_OPACITY_MASK)
 	};
 	
 	virtual TimeManager *GetTimeManager ();
