@@ -1,5 +1,10 @@
 2010-08-18  David Reveman  <davidr@novell.com>
 
+	* uielement.h: Add COMPOSITE_MASK.
+
+	* uielement.cpp (ComputeComposite): Improve code so that
+	optimizations can be added.
+
 	* effect.h:
 	* effect.cpp: Add type and opacity properties to TransformEffect
 	class.
